--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "phaser-project-template-cisc374",
+    "name": "coding-2-phaser-tutorial",
     "version": "4.0.0",
-    "description": "Phaser 3 starter template with TypeScript and webpack, updated.",
-    "homepage": "https://github.com/UD-S24-CISC374/phaser-project-template#readme",
+    "description": "Phaser 3 game based on a tutorial",
+    "homepage": "https://github.com/UD-S24-CISC374/coding-2-phaser-tutorial#readme",
     "main": "index.js",
     "scripts": {
         "start": "webpack serve --config webpack/webpack.dev.js",
@@ -29,7 +29,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/UD-S24-CISC374/phaser-project-template.git"
+        "url": "https://github.com/UD-S24-CISC374/coding-2-phaser-tutorial.git"
     },
     "engines": {
         "node": ">=12"
